<resources>
    <string name="app_name">Trash Cash</string>
    <string name="logo_splash_screen_description">Trash Cash logo in splash screen</string>
    <string name="default_login_title_text">Login</string>
    <string name="default_email_hint_text">Cth: andy@mail.com</string>
    <string name="default_password_hint_text">****************</string>
    <string name="default_login_btn_text">Login</string>
    <string name="default_dont_have_any_account_text">Belum mempunyai akun?</string>
    <string name="default_register_btn_text">Register</string>
    <string name="default_already_have_account">Sudah memiliki akun?</string>
    <string name="default_username_hint_text">Cth: Andy Santoso</string>
    <string name="default_register_user_title_text">Register</string>
    <string name="default_contact_hint_text">Cth: +628123456789</string>
    <string name="default_province_prompt_spinner">Provinsi</string>
    <string name="default_address_hint_text">Cth: Jalan Sulatri 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_input_form_name">Name:</string>
    <string name="title_input_form_email">Email:</string>
    <string name="title_input_form_phone">Phone Number:</string>
    <string name="title_input_form_province">Provinsi:</string>
    <string name="title_input_form_address">Address:</string>
    <string name="btn_save_edit">Simpan</string>
    <string name="btn_see_detail">lihat detail</string>
    <string name="contact_to_buy">Contact to Buy</string>
    <string name="description">Description:</string>

    <string name="tv_price">Mulai dari IDR %1$s</string>
    <string name="tv_qty">Qty: %1$s Kg</string>
    <string name="title_input_form_password">Password:</string>
</resources>