<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:paddingHorizontal="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgEditUser"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/profile_placeholder" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_input_form_name"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ed_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/default_username_hint_text"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_input_form_email"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ed_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/default_email_hint_text"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_input_form_phone"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ed_edit_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/default_contact_hint_text"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_input_form_province"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                app:strokeColor="@color/gray_1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_edit_province"
                    android:hint="@string/default_province_prompt_spinner"
                    app:ms_background_color="#F2F2F2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_input_form_address"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ed_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/default_address_hint_text"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/white"
                android:text="@string/btn_save_edit"
                android:layout_marginBottom="25dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>